Fix: Course title not centered when the student view button is shown
The Student view button is now included in the flex layout, this
makes centering the subject title easier, now the title is fully
centered by the flex layout, no absolute position or margin
adjustments are needed

fixes LS-2851
flag= none

Test plan:
- Go to the course settings page and expect the subject title to be
centered.
- Go to any tab that shows the Student View button and expect the
subject title to keep the position in the middle of the header row
- Resize the window and expect the title to stay in the middle

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/279626
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Product-Review: Jonathan Guardado <jonathan.guardado@instructure.com>
QA-Review: Nate Armstrong <narmstrong@instructure.com>

--- a/app/stylesheets/bundles/k5_theme.scss
+++ b/app/stylesheets/bundles/k5_theme.scss
@@ -55,11 +55,11 @@
   font-weight: bold;
   text-align: center;
   display: flex;
-  flex: 3;
-  max-width: 50%;
+  flex: 2;
   justify-content: center;
-  margin: 1% 25% 1% 1%;
+  margin: 1%;
 }
+
 
 // when the viewport width shrinks,
 // shrink the course name so it doesn't
@@ -68,7 +68,7 @@
 // where "Back to Subject" is the longest translated string.
 @media (max-width: 875px) {
   .k5-heading-course-name {
-    margin: 1% 30% 1% 5%
+    flex: 1;
   }
 }
 // grades
